--- a/site/templates/twig/code-tables/mar/cocom/form.twig
+++ b/site/templates/twig/code-tables/mar/cocom/form.twig
@@ -93,7 +93,7 @@
 				{% include 'util/bootstrap/form/input.twig' with {
 					'input': {
 						'name': 'exchange_rate',
-						'addclasses': ['text-right'],
+						'addclasses': ['text-right', 'text-monospace'],
 						'attributes': {
 							'max': manager.fieldAttribute('exchange_rate', 'max'),
 							'min': manager.fieldAttribute('exchange_rate', 'min'),
