--- a/site/templates/twig/code-tables/mar/csv/form.twig
+++ b/site/templates/twig/code-tables/mar/csv/form.twig
@@ -39,6 +39,7 @@
 					'input': {
 						'name': 'description',
 						'size': 'sm',
+						'addclasses': ['text-monospace'],
 						'attributes': {
 							'maxlength': manager.fieldAttribute('description', 'maxlength')
 						}
