--- a/site/templates/twig/code-tables/mar/mtm/form/gl-account.twig
+++ b/site/templates/twig/code-tables/mar/mtm/form/gl-account.twig
@@ -5,7 +5,7 @@
 			'size': 'sm',
 			'input': {
 				'name': 'gl_account',
-				'addclasses': ['gl-account'],
+				'addclasses': ['gl-account', 'text-monospace'],
 				'attributes': {
 					'placeholder': '',
 					'aria-label':  'General Ledger Account',
