--- a/site/templates/twig/code-tables/msa/sysop/form/web.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/web.twig
@@ -43,6 +43,8 @@
 					'input': {
 						'name': 'docfolder',
 						'value': code.docfolder,
+						'size': 'sm',
+						'addclasses': ['text-monospace'],
 						'attributes': {
 							'readonly': code.filename() == false
 						}
