--- a/site/templates/twig/code-tables/mso/lsm/list.twig
+++ b/site/templates/twig/code-tables/mso/lsm/list.twig
@@ -26,13 +26,13 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2">
+			<div class="col-sm-2 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 text-monospace">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 text-monospace">
 				{{ code.updateinventorywatch|capitalize }}
 			</div>
 			<div class="col-sm-3 text-center">
