--- a/site/templates/twig/code-tables/mso/rgasc/list.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/list.twig
@@ -29,16 +29,16 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2">
+			<div class="col-sm-2 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 text-monospace">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-2">
+			<div class="col-sm-2 text-monospace">
 				{{ code.whseid }}
 			</div>
-			<div class="col-sm-2">
+			<div class="col-sm-2 text-monospace">
 				{{ code.acctnbr }}
 			</div>
 			<div class="col-sm-2 text-center">
