--- a/site/templates/twig/code-tables/map/bum/form.twig
+++ b/site/templates/twig/code-tables/map/bum/form.twig
@@ -4,17 +4,17 @@
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
+		<input type="text" name="code" class="form-control form-control-sm text-monospace" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
+		<input type="text" name="description" class="form-control form-control-sm text-monospace" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="form-group">
 		<label for="email">Email</label>
-		<input type="email" name="email" class="form-control form-control-sm" id="email">
+		<input type="email" name="email" class="form-control form-control-sm text-monospace" id="email">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
