--- a/site/templates/twig/code-tables/map/bum/list.twig
+++ b/site/templates/twig/code-tables/map/bum/list.twig
@@ -11,13 +11,13 @@
 		<div class="col-sm-2">
 			Code
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-4">
 			Description
 		</div>
 		<div class="col-sm-4">
 			Email
 		</div>
-		<div class="col-sm-3 text-center">
+		<div class="col-sm-2 text-center">
 			{% if page.is_print() == false %}
 				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
@@ -30,16 +30,16 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2 font-monospace">
+			<div class="col-sm-2 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-4 text-monospace">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 text-monospace">
 				<a href="mailto:{{ code.email }}" class="link">{{ code.email }}</a>
 			</div>
-			<div class="col-sm-3 text-center">
+			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
