--- a/site/templates/twig/code-tables/mar/cocom/list.twig
+++ b/site/templates/twig/code-tables/mar/cocom/list.twig
@@ -28,25 +28,25 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-1 font-monospace">
+			<div class="col-sm-1 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-1">
+			<div class="col-sm-1 text-monospace">
 				{{ code.iso2 }}
 			</div>
-			<div class="col-sm-1">
+			<div class="col-sm-1 text-monospace">
 				{{ code.numeric }}
 			</div>
-			<div class="col-sm-1">
+			<div class="col-sm-1 text-monospace">
 				{{ code.custom }}
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 text-monospace">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-2 text-right">
+			<div class="col-sm-2 text-monospace text-right">
 				{{ code.exchange_rate|number_format(manager.fieldAttribute('exchange_rate', 'precision')) }}
 			</div>
-			<div class="col-sm-1 text-right">
+			<div class="col-sm-1 text-monospace text-right">
 				{{ code.country_date|convertdate(manager.fieldAttribute('country_date', 'displayformat')) }}
 			</div>
 			{% if input.get.offsetExists('print') == false %}
