--- a/site/templates/twig/code-tables/mar/cpm/list.twig
+++ b/site/templates/twig/code-tables/mar/cpm/list.twig
@@ -27,19 +27,19 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-1 font-monospace">
+			<div class="col-sm-1 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 text-monospace">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-1">
+			<div class="col-sm-1 text-monospace">
 				{{ code.surcharge }}
 			</div>
-			<div class="col-sm-2 text-right">
+			<div class="col-sm-2 text-monospace text-right">
 				{{ code.surcharge == 'Y' ? code.percent ~ '%' : '' }}
 			</div>
-			<div class="col-sm-4 text-center">
+			<div class="col-sm-4 text-monospace text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
