--- a/site/templates/twig/code-tables/mar/csv/form/artaxcode.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/artaxcode.twig
@@ -10,6 +10,7 @@
 						'size': 'sm',
 						'input': {
 							'name': 'artaxcode',
+							'addclasses': ['text-monospace'],
 							'attributes': {
 								'placeholder': '',
 								'aria-label':  'Tax Codes',
