--- a/site/templates/twig/code-tables/mar/mtm/form/freight-tax-code.twig
+++ b/site/templates/twig/code-tables/mar/mtm/form/freight-tax-code.twig
@@ -5,7 +5,7 @@
 			'size': 'sm',
 			'input': {
 				'name': 'freight_tax_code',
-				'addclasses': ['freight-tax-code'],
+				'addclasses': ['freight-tax-code', 'text-monospace'],
 				'attributes': {
 					'placeholder': '',
 					'aria-label':  'Freight Tax Code',
