--- a/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
@@ -1,5 +1,5 @@
 <div class="list-group mb-3">
-	<div class="list-group-item bg-dark text-white fw-bold">
+	<div class="list-group-item px-2 bg-dark text-white fw-bold">
 		<div class="row">
 			<div class="col-sm-2">Account #</div>
 			<div class="col-sm-3">Name</div>
@@ -16,13 +16,13 @@
 		</div>
 	</div>
 	{% for account in accounts %}
-		<div class="list-group-item account" data-accountnbr="{{ account.accountnbr }}">
+		<div class="list-group-item px-2 account" data-accountnbr="{{ account.accountnbr }}">
 			<div class="row">
-				<div class="col-sm-2">{{ account.accountnbr }}</div>
-				<div class="col-sm-3">{{ account.name }}</div>
-				<div class="col-sm-2">{{ account.city }}</div>
-				<div class="col-sm-1">{{ account.state }}</div>
-				<div class="col-sm-1">{{ account.zip }}</div>
+				<div class="col-sm-2 text-monospace">{{ account.accountnbr }}</div>
+				<div class="col-sm-3 text-monospace">{{ account.name }}</div>
+				<div class="col-sm-2 text-monospace">{{ account.city }}</div>
+				<div class="col-sm-1 text-monospace">{{ account.state }}</div>
+				<div class="col-sm-1 text-monospace">{{ account.zip }}</div>
 				<div class="col-sm-3 text-center">
 					{% if page.is_print() == false %}
 						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-account-modal" data-accountnbr="{{ account.accountnbr }}" data-description="{{ account.description }}" data-json="{{ manager.recordJson(account)|json_encode }}">
