FEAT: add record locking

--- a/site/templates/twig/code-tables/mgl/dtm/list.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/list.twig
@@ -27,10 +27,10 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2 font-monospace">
+			<div class="col-sm-2 text-monospace">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-7">
+			<div class="col-sm-7 text-monospace">
 				{{ code.description }}
 			</div>
 			<div class="col-sm-3 text-center">
@@ -39,20 +39,26 @@
 						<i class="fa fa-list-ol" aria-hidden="true"></i> Show Accts
 					</button>
 					&nbsp;
-					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-					</button>
-					&nbsp;
-					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-						<i class="fa fa-trash" aria-hidden="true"></i> Delete
-					</a>
+					{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
+						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</button>
+						&nbsp;
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
+					{% else %}
+						<span class="badge badge-secondary">
+							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+						</span>
+					{% endif %}
 				{% endif %}
 			</div>
 		</div>
 		<div class="row collapse gl-accounts {{ input.get.offsetExists('print') ? 'show' : ''}}" data-code="{{ code.code }}">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-8">
-				<table class="table table-sm">
+				<table class="table table-sm text-monospace">
 					<thead>
 						<tr>
 							<th>Account #</th>
