--- a/site/templates/twig/code-tables/js/events/show-shown.js.twig
+++ b/site/templates/twig/code-tables/js/events/show-shown.js.twig
@@ -1,3 +1,5 @@
+var uri = URI();
+
 $('#edit-code-modal').on('show.bs.modal', function (event) {
 	var button = $(event.relatedTarget); // Button that triggered the modal
 	var modal  = $(this);
@@ -8,7 +10,21 @@ $('#edit-code-modal').on('show.bs.modal', function (event) {
 		// modal.find('.modal-title').text('Edit Code ' + code);
 		modal.find('.modal-title').text('Edit Code');
 	}
+
 	formCode.updateInputsFromJson(button.data('json'));
+	
+	var lockUrl = URI(config.ajax.urls.locker.lock);
+	lockUrl.setQuery('function', codetable.table);
+	lockUrl.setQuery('key', code);
+
+	var ajax = new AjaxRequest(lockUrl.toString());
+	ajax.request(function(canEdit) {
+		if (canEdit === false) {
+			alert.recordIsLocked(function() {
+				modal.modal('hide');
+			});
+		}
+	});
 });
 
 $('#edit-code-modal').on('shown.bs.modal', function (event) {
@@ -30,5 +46,4 @@ $('#edit-code-modal').on('shown.bs.modal', function (event) {
 	} else {
 		formCode.inputs.code.focus();
 	}
-	
 });
