--- a/site/templates/twig/code-tables/mar/cocom/list.twig
+++ b/site/templates/twig/code-tables/mar/cocom/list.twig
@@ -50,11 +50,15 @@
 				{{ code.country_date|convertdate(manager.fieldAttribute('country_date', 'displayformat')) }}
 			</div>
 			{% if input.get.offsetExists('print') == false %}
-				<div class="col-sm-2 text-center">
+				{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</button>
-				</div>
+				{% else %}
+					<span class="badge badge-secondary">
+						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+					</span>
+				{% endif %}
 			{% endif %}
 		</div>
 	{% endblock %}
