--- a/site/templates/twig/code-tables/min/iarn/list.twig
+++ b/site/templates/twig/code-tables/min/iarn/list.twig
@@ -34,7 +34,7 @@
 				{{ code.sysdefined }}
 			</div>
 			<div class="col-sm-4 text-center">
-				{% if page.is_print() == false %}
+				{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</button>
@@ -44,6 +44,10 @@
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% endif %}
+				{% else %}
+					<span class="badge badge-secondary">
+						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+					</span>
 				{% endif %}
 			</div>
 		</div>
