--- a/site/templates/twig/code-tables/optm/sysop/list/list.twig
+++ b/site/templates/twig/code-tables/optm/sysop/list/list.twig
@@ -11,9 +11,9 @@
 <table class="table table-sm">
 	<thead>
 		<tr class="bg-dark text-white p-3">
-			<th class="p-3">Code</th>
-			<th class="p-3">Description</th>
-			<th class="p-3 text-right">
+			<th class="py-3">Code</th>
+			<th class="py-3">Description</th>
+			<th class="py-3 text-right">
 				{% if input.get.offsetExists('print') == false %}
 					<button class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add
@@ -40,13 +40,19 @@
 				<td class="text-monospace">{{ code.description }}</td>
 				<td class="text-right">
 					{% if input.get.offsetExists('print') == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ optm.codeJson(code)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp; &nbsp;
-						<a href="{{ page.codeDeleteUrl(code.sysop, code.id) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+						{% if optm.recordlocker.isLocked(code.code) == false or optm.recordlocker.isLockedByUser(code.code) %}
+							<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ optm.codeJson(code)|json_encode }}">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</button>
+							&nbsp; &nbsp;
+							<a href="{{ page.codeDeleteUrl(code.sysop, code.id) }}" class="btn btn-danger btn-sm delete_button">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ optm.recordlocker.getLockingUser(code.code) }}
+							</span>
+						{% endif %}
 					{% endif %}
 				</td>
 			</tr>
